--- a/source/sass/blocks/_address.scss
+++ b/source/sass/blocks/_address.scss
@@ -1,49 +1,76 @@
 .address {
-  background-color: #ffffff;
-  padding: 20px 0;
+  padding-top: 28px;
+  padding-bottom: 25px;
 
-  & .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
+  @media (min-width: $tablet-width) {
+    padding-top: 15px;
+    padding-bottom: 58px;
   }
 
   @media (min-width: $desktop-width) {
-    & .container {
-      padding: 0;
-      width: auto;
+    padding: 0;
+  }
+
+  &__container {
+    display: flex;
+
+    @media (min-width: $tablet-width) {
+      justify-content: space-between;
+      padding: 0 72px;
+    }
+
+    @media (min-width: $desktop-width) {
+      position: absolute;
+      top: 90px;
+      left: 40px;
+      z-index: 1;
+
+      width: 570px;
+      padding: 65px 78px;
+      padding-bottom: 60px;
+
+      background-color: #ffffff;
     }
   }
 
   &__invitation {
+    width: 125px;
     margin: 0;
+    margin-right: 15px;
     padding: 0;
-    font-family: $title-fontstack;
-    text-transform: uppercase;
+
     font-size: 16px;
+    font-family: $title-fontstack;
     line-height: 20px;
+    text-transform: uppercase;
 
     @media (min-width: $tablet-width) {
       width: 180px;
+
       font-size: 20px;
       line-height: 25px;
     }
   }
 
   &__address {
+    width: 135px;
     margin: 0;
     padding: 0;
+
     line-height: 20px;
-    width: 50%;
 
     @media (min-width: $tablet-width) {
-      text-align: right;
-      width: 180px;
       display: flex;
       flex-direction: column;
+      width: 180px;
+      min-height: 80px;
+
+      text-align: right;
     }
 
     @media (min-width: $desktop-width) {
+      width: 165px;
+
       text-align: left;
     }
   }
