--- a/source/sass/blocks/_before-after.scss
+++ b/source/sass/blocks/_before-after.scss
@@ -1,86 +1,165 @@
 .before-after {
-  padding-bottom: 40px;
+  padding-bottom: 37px;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+
+    padding-bottom: 0;
+  }
 
   &__list {
     @include reset;
-    position: relative;
+
     min-height: 240px;
     margin: 0 auto;
-    margin-bottom: 36px;
+    margin-bottom: 32px;
 
     @media (min-width: $tablet-width) {
-      width: 677px;
+      display: flex;
+      width: 690px;
+      margin-bottom: 0;
     }
   }
 
   &__item {
-    position: absolute;
+    position: relative;
+
     width: 100%;
+
+    @media (min-width: $tablet-width) {
+      width: 50%;
+      height: 517px;
+      overflow: hidden;
+    }
   }
 
-  &__item img {
+  &__img {
+    position: absolute;
+
     display: block;
-    margin: 0 auto;
+    max-width: none;
+
+    @media (min-width: $tablet-width) {
+      top: 4px;
+      left: 7px;
+
+      width: 690px;
+      height: 517px;
+    }
+  }
+
+  &__img--after {
+    display: none;
+
+    @media (min-width: $tablet-width) {
+      top: 3px;
+      right: -7px;
+      left: auto;
+
+      display: block;
+    }
   }
 
   &__controls {
-    width: 196px;
-    margin: 0 auto;
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    width: 200px;
+    margin: 0 auto;
+    padding-left: 4px;
 
     @media (min-width: $tablet-width) {
-      align-items: center;
-      width: 566px;
+      justify-content: center;
+      width: auto;
+      height: 460px;
+      margin-top: -346px;
+      padding-top: 370px;
+      padding-bottom: 70px;
+
+      background: linear-gradient(to right, #f2f2f2 0%, #f2f2f2 50%, #eaeaea 50%, #eaeaea 100%);
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-top: -321px;
+      padding-top: 360px;
     }
   }
 
   &__input {
+    width: 84px;
+    height: 14px;
+    padding: 3px;
+    padding-left: 5px;
+
+    background-color: #ffffff;
+    border: 1px solid #cecece;
+    border-radius: 10px;
+
     @media (min-width: $tablet-width) {
       position: relative;
+
       width: 428px;
       height: 6px;
+      margin: 0 25px;
+
       background-color: #dbdbdb;
       border-radius: 5px;
     }
   }
 
   &__input-handle {
+    width: 35px;
+    height: 6px;
+
+    background-color: $accent-color;
+    border-radius: 5px;
+    cursor: pointer;
+
     @media (min-width: $tablet-width) {
       position: absolute;
       top: 0;
       left: 50%;
-      transform: translateY(-14px) translateX(-50%);
+
+      display: flex;
       width: 34px;
       height: 34px;
+
       background-color: #ffffff;
-      border-radius: 50%;
       border: 1px solid #cdcdcd;
-      display: flex;
+      border-radius: 50%;
+      transform: translateY(-14px) translateX(-50%);
+      filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.15));
 
       &::before {
-        content: "";
         width: 8px;
         height: 8px;
         margin: auto;
-        border-radius: 50%;
+
         background-color: $accent-color;
+        border-radius: 50%;
+
+        content: "";
       }
     }
   }
 
   &__button {
-    font-family: $title-fontstack;
-    text-transform: uppercase;
+    padding: 0;
+
     color: $title-color;
     font-size: 16px;
+    font-family: $title-fontstack;
+    text-transform: uppercase;
+
     background: none;
     border: none;
 
     @media (min-width: $tablet-width) {
       padding: 0;
       padding-bottom: 4px;
+
       font-size: 20px;
+
       border-bottom: 1px dotted #cdcdcd;
     }
   }
