--- a/source/sass/blocks/_selection.scss
+++ b/source/sass/blocks/_selection.scss
@@ -5,11 +5,19 @@
 
   &__title {
     @include title_style;
+    margin-top: 14px;
+    margin-bottom: 25px;
 
     @media (min-width: $tablet-width) {
+      margin-bottom: 55px;
+      padding-top: 28px;
+
       font-size: 60px;
       line-height: 60px;
-      margin-bottom: 50px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-top: 42px;
     }
   }
 }
