--- a/source/sass/blocks/_social.scss
+++ b/source/sass/blocks/_social.scss
@@ -1,12 +1,40 @@
 .social {
-  list-style: none;
   display: flex;
   justify-content: space-between;
+  list-style: none;
 
   &__link {
     display: block;
     width: 22px;
     height: 22px;
-    background-color: #ffffff;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    @media (min-width: $tablet-width) {
+      width: 28px;
+      height: 28px;
+    }
+
+    &--vk {
+      background-image: url("../../img/icon-vk-mobile.svg");
+
+      @media (min-width: $tablet-width) {
+        margin-right: 5px;
+        background-size: 30px 16px;
+      }
+    }
+
+    &--instagram {
+      background-image: url("../../img/icon-insta-mobile.svg");
+      background-size: 16px 16px;
+
+      @media (min-width: $tablet-width) {
+        background-size: 23px 23px;
+      }
+    }
+
+    &--facebook {
+      background-image: url("../../img/icon-fb-mobile.svg");
+    }
   }
 }
