--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,13 +1,14 @@
 @import "blocks/normalize";
+@import "blocks/fonts";
 @import "blocks/variables";
 @import "blocks/scaffolding";
 @import "blocks/mixins";
 @import "blocks/container";
+@import "blocks/button";
 @import "blocks/page-header";
 @import "blocks/page-main";
 @import "blocks/site-list";
 @import "blocks/promo";
-@import "blocks/button";
 @import "blocks/programs";
 @import "blocks/program";
 @import "blocks/explanation";
