--- a/source/sass/blocks/_example.scss
+++ b/source/sass/blocks/_example.scss
@@ -1,31 +1,106 @@
 .example {
-  padding-top: 35px;
+  padding-top: 16px;
+
+  background-color: $gray-color;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 43px;
+
+    background-color: #ffffff;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+
+    margin-bottom: 0;
+    padding-top: 0;
+
+    background-image: linear-gradient(to right, #f2f2f2 0%, #f2f2f2 70%, #eaeaea 70%, #eaeaea 100%);
+
+    &::after {
+      position: absolute;
+      top: 0;
+
+      display: block;
+      width: 100%;
+      height: 190px;
+
+      background-color: #ffffff;
+
+      content: "";
+    }
+  }
+
+  &__wrapper {
+    @media (min-width: $desktop-width) {
+      display: flex;
+      width: $desktop-width;
+      margin: 0 auto;
+      padding: 0 40px;
+    }
+  }
 
   &__container {
     @media (min-width: $desktop-width) {
-      display: flex;
+      z-index: 1;
+
+      padding: 0;
+    }
+  }
+
+  &__info {
+    @media (min-width: $desktop-width) {
+      width: 570px;
+      padding-top: 55px;
+      padding-right: 100px;
     }
   }
 
   &__title {
     @include title-style;
-    margin-bottom: 40px;
+    margin-bottom: 23px;
 
     @media (min-width: $tablet-width) {
+      margin-bottom: 65px;
+
       font-size: 60px;
       line-height: 60px;
-      margin-bottom: 60px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-bottom: 145px;
     }
   }
 
   &__text {
+    margin: 0;
+    margin-bottom: 25px;
+    padding-right: 10px;
+
     @media (min-width: $tablet-width) {
-      margin-bottom: 60px;
+      margin-bottom: 52px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-bottom: 68px;
     }
   }
 
   &__slider {
-    outline: 1px solid lime;
-    background-color: rgba(0, 240, 0, 0.05);
+    width: 320px;
+    margin: 0 auto;
+    padding-top: 5px;
+
+    @media (min-width: $tablet-width) {
+      width: auto;
+      padding-top: 0;
+    }
+
+    @media (min-width: $desktop-width) {
+      z-index: 2;
+
+      width: 610px;
+      padding-left: 38px;
+    }
   }
 }
