--- a/source/sass/blocks/_program.scss
+++ b/source/sass/blocks/_program.scss
@@ -1,92 +1,209 @@
 .program {
   position: relative;
 
-  background-color: $gray-color;
+  margin-bottom: 22px;
   padding: 21px;
-  margin-bottom: 21px;
+  padding-top: 22px;
+
+  background-color: $gray-color;
 
   @media (min-width: $tablet-width) {
-    padding-top: 80px;
-    padding-left: 50px;
-    padding-bottom: 65px;
-    padding-right: 285px;
+    margin-bottom: 30px;
+    padding-top: 75px;
+    padding-bottom: 62px;
+    padding-left: 53px;
   }
 
   @media (min-width: $desktop-width) {
     width: 570px;
+    margin-bottom: 0;
+    padding-top: 45px;
     padding-right: 50px;
-    padding-top: 47px;
   }
 
   &__title {
+    position: relative;
+
     display: flex;
-    margin: 0;
-    margin-bottom: 20px;
     align-items: center;
-    font-family: $title-fontstack;
+    margin: 0;
+    margin-bottom: 23px;
+
     font-weight: normal;
-    text-transform: uppercase;
     font-size: 24px;
+    font-family: $title-fontstack;
     line-height: 37px;
+    text-transform: uppercase;
 
     @media (min-width: $tablet-width) {
       display: block;
+      margin-bottom: 25px;
+
       font-size: 36px;
     }
 
     @media (min-width: $desktop-width) {
       display: flex;
-      margin-bottom: 45px;
+      margin-bottom: 40px;
     }
 
     &::before {
-      content: "";
       display: block;
-      margin-right: 20px;
       width: 50px;
       height: 50px;
+      margin-right: 20px;
+
       background-color: $accent-color;
       border-radius: 50%;
 
+      content: "";
+
       @media (min-width: $tablet-width) {
         position: absolute;
+        top: 15px;
+        right: 20px;
+
         width: 200px;
         height: 200px;
-        right: 40px;
       }
 
       @media (min-width: $desktop-width) {
+        position: static;
+
         width: 100px;
         height: 100px;
-        position: static;
-        margin-right: 70px;
+        margin-right: 62px;
+      }
+    }
+
+    &::after {
+      position: absolute;
+
+      display: block;
+      width: 35px;
+      height: 49px;
+
+      background-repeat: no-repeat;
+
+      content: "";
+    }
+
+    &--slim {
+      &::after {
+        top: -1px;
+        left: 8px;
+
+        background-image: url("../../img/icon-cat-slim.svg");
+
+        @media (min-width: $tablet-width) {
+          top: 4px;
+          right: 70px;
+          left: auto;
+
+          width: 140px;
+          height: 194px;
+        }
+
+        @media (min-width: $desktop-width) {
+          top: -5px;
+          right: auto;
+          left: 14px;
+
+          width: 70px;
+          height: 97px;
+        }
+      }
+    }
+
+    &--gain {
+      &::after {
+        top: 12px;
+        left: -8px;
+
+        width: 67px;
+        height: 28px;
+
+        background-image: url("../../img/icon-cat-pro.svg");
+
+        @media (min-width: $tablet-width) {
+          top: 60px;
+          right: 8px;
+          left: auto;
+
+          width: 268px;
+          height: 112px;
+        }
+
+        @media (min-width: $desktop-width) {
+          top: 25px;
+          right: auto;
+          left: -20px;
+
+          width: 134px;
+          height: 56px;
+        }
       }
     }
   }
 
   &__text {
-    margin-bottom: 30px;
+    margin-bottom: 22px;
 
     @media (min-width: $tablet-width) {
-      margin-bottom: 65px;
+      margin-bottom: 58px;
+      padding-right: 260px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-bottom: 34px;
+      padding-right: 0;
+    }
+  }
+
+  &__title--gain + &__text {
+    @media (min-width: $tablet-width) {
+      padding-right: 290px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-right: 0;
     }
   }
 
   &__to-catalog {
     display: block;
-    font-style: 16px;
-    line-height: 16px;
+    padding-top: 19px;
+
+    color: $title-color;
+    font-size: 16px;
     font-family: $title-fontstack;
+    line-height: 16px;
     text-transform: uppercase;
     text-decoration: none;
-    color: $title-color;
-    padding-top: 23px;
+
     border-top: 1px solid #d9d9d9;
 
+    &::after {
+      display: inline-block;
+      width: 24px;
+      height: 13px;
+      margin-left: 8px;
+
+      background: url("../../img/icon-right-arrow-long.svg") no-repeat center;
+
+      content: "";
+    }
+
     @media (min-width: $tablet-width) {
-      font-size: 20px;
       padding: 0;
+
+      font-size: 20px;
+
       border: none;
+
+      &::after {
+        margin-left: 19px;
+      }
     }
   }
 }
