--- a/source/sass/blocks/_promo.scss
+++ b/source/sass/blocks/_promo.scss
@@ -1,109 +1,146 @@
 .promo {
   position: relative;
+
   padding-top: 28px;
+
   color: #ffffff;
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+    padding-bottom: 530px;
+
     color: $body-text-color;
     text-align: left;
-    padding-bottom: 530px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0;
-    margin-top: -145px;
-    min-height: 696px;
+    margin-bottom: 80px;
+  }
+
+  @media (min-width: $desktop-width) {
     z-index: -1;
+
+    min-height: 696px;
+    margin-top: -145px;
+    padding: 0;
   }
 
   &__container {
     @media (min-width: $desktop-width) {
-      padding-top: 225px;
-      padding-left: 80px;
+      padding-top: 222px;
       padding-right: 600px;
+      padding-left: 33px;
     }
   }
 
   &__title {
     @include title-style;
-    line-height: 36px;
+    margin-bottom: 24px;
+
     color: #ffffff;
-    margin-bottom: 16px;
+    line-height: 36px;
 
     @media (min-width: $tablet-width) {
-      margin-left: 90px;
       margin-bottom: 40px;
+      margin-left: 87px;
       padding-right: 60px;
+
+      color: #111111;
 
       font-size: 60px;
       line-height: 60px;
-      color: #111111;
     }
   }
 
   &__slogan {
+    margin-bottom: 27px;
+
     font-family: $title-fontstack;
-    text-transform: uppercase;
     line-height: 14px;
+    text-transform: uppercase;
 
     @media (min-width: $tablet-width) {
-      margin-left: 90px;
-      margin-bottom: 20px;
+      margin-bottom: 47px;
+      margin-left: 88px;
+
       font-size: 20px;
       line-height: 20px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-bottom: 53px;
     }
   }
 
   &__img {
     @media (min-width: $tablet-width) {
-      width: 709px;
-      height: 609px;
       position: absolute;
       bottom: 0;
       z-index: -1;
+
+      width: 709px;
+      height: 609px;
     }
 
     @media (min-width: $desktop-width) {
-      width: 552px;
-      height: 499px;
       position: absolute;
       top: 145px;
       left: 50%;
-      transform: translateX(-116px);
       z-index: -1;
+
+      width: 552px;
+      height: 499px;
+
+      transform: translateX(-135px);
     }
   }
 
   &::after {
-    content: "";
-    display: block;
-    height: 305px;
-    width: 100%;
-    background-color: $accent-color;
     position: absolute;
     top: 0;
     z-index: -1;
+
+    display: block;
+    width: 100%;
+    height: 305px;
+
+    background: #63a73a url("../../img/index-background-mobile@1x.jpg")
+      no-repeat center;
+
+    content: "";
 
     @media (min-width: $tablet-width) {
       display: none;
     }
 
     @media (min-width: $desktop-width) {
-      display: block;
-      min-height: 100%;
-      width: 50%;
       right: 0;
       z-index: -10;
+
+      display: block;
+      width: 50%;
+      min-height: 100%;
+
+      background: #63a73a url("../../img/index-background-desktop@1x.jpg")
+        no-repeat right top;
     }
   }
 
   &__button {
     width: 100%;
 
+    font-size: 14px;
+    line-height: 18px;
+
     @media (min-width: $tablet-width) {
-      margin-left: 90px;
+      width: auto;
       margin-top: 40px;
+      margin-left: 88px;
+      padding: 17px 26px;
+
+      font-size: 20px;
+      line-height: 20px;
     }
   }
 }
