--- a/source/sass/blocks/_site-list.scss
+++ b/source/sass/blocks/_site-list.scss
@@ -1,38 +1,49 @@
 .site-list {
   @include reset;
   color: $title-color;
-  font-family: "Oswald", "Arial", "Helvetica", sans-serif;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 20px;
+  font-family: "Oswald", "Arial", "Helvetica", sans-serif;
   line-height: 20px;
-  text-transform: uppercase;
   text-align: center;
+  text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     display: flex;
+    justify-content: space-between;
+
+    color: #222222;
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
-    color: #222222;
   }
 
   &__item {
     border-bottom: 1px solid #e6e6e6;
 
     @media (min-width: $tablet-width) {
-      padding: 0 20px;
+      padding-right: 35px;
+
       border-bottom: none;
+
+      &:last-child {
+        padding-right: 0;
+      }
     }
   }
 
   &__link {
     display: block;
-    padding: 24px 0;
-    text-decoration: none;
+    padding: 22px 0;
+    padding-bottom: 23px;
+
     color: inherit;
+    text-decoration: none;
 
     @media (min-width: $tablet-width) {
-      padding-bottom: 12px;
+      padding: 0;
+      padding-bottom: 8px;
+
       border-bottom: 2px solid $accent-color;
 
       &[href] {
@@ -42,17 +53,6 @@
 
     @media (min-width: $desktop-width) {
       font-size: 20px;
-    }
-  }
-
-  &--on-background &__link {
-    @media (min-width: $desktop-width) {
-      color: #ffffff;
-      border-bottom: 2px solid #ffffff;
-
-      &[href] {
-        border: none;
-      }
     }
   }
 }
